fixed alignment for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,7 @@ li {
 	}
 
   .name {
-    top: 48vh;
+    top: 52vh;
   }
 }
 
